FIX: modified index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Joanne's profile</title>
     <link rel="stylesheet" href="./css/style.css">
-
     <meta property="og:site_name" content="Joanne, Front-End Developer"/>
     <meta property="og:title" content="Joanne, Front-End Developer"/>
     <meta property="og:type" content="website"/>
@@ -15,23 +14,21 @@
     <meta property="og:image:height" content="96"/>
 
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-
     <script src="./js/jquery-3.4.1.min.js"></script>
 </head>
 <body>
-
     <div class="wrap">
-        <nav class="navbar navbar-default ">
+        <nav class="navbar navbar-default">
           <div class="container">
             <a href="#" class="logo pull-left">
               <span class="hidden-mobile"></span>
             </a>
             <ul class="nav-menu pull-right clearfix hidden-mobile">
-              <li><a href="#three-point" class="scrollTop" title="skills">
+              <li><a href="#skills" class="scrollTop" title="skills">
                 Skills
                 </a>
               </li>
-              <li><a href="#skills" class="scrollTop" title="education">
+              <li><a href="#education" class="scrollTop" title="education">
                 Education and Experience
                 </a>
               </li>
@@ -49,7 +46,7 @@
           </div>
         </section>
         
-        <section id="three-point" class="section bg-white section-rotate box-shadow">
+        <section id="skills" class="section bg-white section-rotate box-shadow">
           <div class="section-rotate-fixed">
             <div class="container p-y-3">
               <h2 class="text-center m-b-2">
@@ -133,7 +130,7 @@
           </div>
         </section>
         
-        <section id="skills" class="bg-gradient1 text-white section-rotate">
+        <section id="education" class="bg-gradient1 text-white section-rotate">
           <div class="section-rotate-fixed">
             <div class="container p-y-3">
               <h2 class="text-center m-b-2">
@@ -288,7 +285,6 @@
           </div>
         </footer>
       </div>
-
 
   <script src="./js/all.js"></script>
 </body>
