FIX: the style of footer

--- a/index.html
+++ b/index.html
@@ -248,36 +248,39 @@
         <footer id="profiles" class="p-y-3 section-rotate box-shadow" style="background: white; height: 500px; margin-bottom: 200px">
           <div class="section-rotate-fixed">
             <div class="container">
-              <h2 class="text-center m-b-1">Get In Touch</h2>
+              <div class="m-x-3 animated" style="margin: 150px 15px 50px 45px;">
+                <h4>
+                  That's my own website and profile. If you’d like to talk about a project or just want to say hi, don't hesitate to get in touch!
+                </h4>
+              </div>
               <div class="row">
-                <div class="col-half m-b-2 animated">
-                  <div>
-                    <ul>
-                      <li style="list-style-type: none;" class="socialIcons">
-                        <a href="https://github.com/prince811009">
-                          <img src="./social-icons/github-logo.png" alt="">
-                        </a>
-                      </li>
-                      <li style="list-style-type: none;" class="socialIcons">
-                        <a href="https://www.linkedin.com/in/chih-jou-huang-778994164/">
-                          <img src="./social-icons/linkedin.png" alt="">
-                        </a>
-                      </li>
-                      <li style="list-style-type: none;" class="socialIcons">
-                        <a href="https://prince811009.github.io">
-                          <img src="./social-icons/blogger.png" alt="">
-                        </a>
-                      </li>
-                      <li style="list-style-type: none;" class="socialIcons">
-                        <a href="prince811009fy@gmail.com">
-                          <img src="./social-icons/envelope.png" alt="">
-                        </a>
-                      </li>
-                    </ul>
-                  </div>
+                <div class="col-half m-b-3 animated">
+                  <ul>
+                    <li style="list-style-type: none;" class="socialIcons">
+                      <a href="https://github.com/prince811009">
+                        <img src="./social-icons/github-logo.png" alt="">
+                      </a>
+                    </li>
+                    <li style="list-style-type: none;" class="socialIcons">
+                      <a href="https://www.linkedin.com/in/chih-jou-huang-778994164/">
+                        <img src="./social-icons/linkedin.png" alt="">
+                      </a>
+                    </li>
+                    <li style="list-style-type: none;" class="socialIcons">
+                      <a href="https://prince811009.github.io">
+                        <img src="./social-icons/blogger.png" alt="">
+                      </a>
+                    </li>
+                    <li style="list-style-type: none;" class="socialIcons">
+                      <a href="prince811009fy@gmail.com">
+                        <img src="./social-icons/envelope.png" alt="">
+                      </a>
+                    </li>
+                  </ul>
                   <div class="footerText">
                     <p>Copyright © Joanne Huang 2019.
-                        All rights reserved. </p>
+                        All rights reserved. 
+                    </p>
                   </div>
                 </div>
               </div>
